syntax = "proto3";

option csharp_namespace = "K8sEchoService";
package echoGrpc;


// The greeting service definition.
service EchoGrpc {
  // Sends a greeting
  rpc Echo (EchoGrpcRequest) returns (EchoGrpcResponse);
}

// The request message containing the user's name.
message EchoGrpcRequest {
  bool environmentVariables = 1;
}

message EchoGrpcResponse {
    string hostName = 1;
    K8sPodInformation podInformation = 2;
    string remoteIpAddress = 3;
    string method = 4;
    string path = 5;
    string host = 6;
    GeneralConfigProto generalConfig = 7;
    EchoGrpcRequest requestBody = 8;
    map<string, string> allHeaders = 9;
    map<string, string> environmentVariables = 10;
}

message GeneralConfigProto {
    SettingsProto settings = 1;
}

message SettingsProto {
    string Key1 = 1;
    string Key2 = 2;
    repeated string items = 3;
}

message K8sPodInformation {
    string nodeName = 1;
    string podName = 2;
    string podNamespace = 3;
    string podIp = 4;
}

message RequestBody {
    string body = 1;
}
